--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.18",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.3",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
