working with server, adding signin API on the server

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB = "mongodb+srv://wayandarma377:8utOgStDESR8EzGy@mernblog.kwlolwb.mongodb.net/?retryWrites=true&w=majority&appName=MERNBlog"
+
+JWT_SECRET = "secret"
